# ex6g

./: BFS.cpp  BFS.h  CMakeLists.txt  Cab.cpp  Cab.h  Driver.cpp  Driver.h  DriverClient.cpp  Grid2D.cpp  Grid2D.h  Input.cpp  Input.h  Intersection.cpp  Intersection.h  LuxuryCab.cpp  LuxuryCab.h  Map.cpp  Map.h  Passenger.cpp  Passenger.h  Point.cpp  Point.h  StandartCab.cpp  StandartCab.h  Task.cpp  Task.h  TaxiCenter.cpp  TaxiCenter.h  ThreadPool.cpp  ThreadPool.h  Trip.cpp  Trip.h  details.txt  log.txt  main.cpp  makefile
sockets/: Socket.h  Tcp.cpp  Tcp.h
